--- a/sproduct.html
+++ b/sproduct.html
@@ -11,7 +11,7 @@
 <body>
     <!--Header-->
     <section id="header" class="headershop">
-        <a href="#"><img src="image-folder/ecom-logo.png" alt="Monsouk-Logo" class="logo"></a>
+        <a href="index.html"><img src="image-folder/ecom-logo.png" alt="Monsouk-Logo" class="logo"></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Acceuil</a></li>
