--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
 <section id="footer">
     <!--first footer column-->
     <div class="col cloo">
-        <a href="#"><img src="image-folder/ecom-logo.png" alt="Monsouk-Logo" class="logo"></a>
+        <a href="index.html"><img src="image-folder/ecom-logo.png" alt="Monsouk-Logo" class="logo"></a>
         <h3>Contact</h3>
         <p><strong>📍 Address :</strong> <br><br>xxxxxx, xxxxxx, xx , xxxx</p>
         <p><strong>📞 Téléphone :</strong> <br><br>06 xx xxx xxx / 05 xx xxx xxx </p>
