--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
+    <title>Contact Page</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -19,7 +19,7 @@
             <li><a href="shop.html">Shop</a></li>
             <li><a href="about.html">About</a></li>
             <li><a class="active" href="contact.html">Contact</a></li>
-            <li><a class="hide" href="cart.html">Mon panier</a></li>
+            <li><a href="login.html">Login</a></li>
         </ul>
     </div>
 
@@ -102,17 +102,17 @@ loading="lazy" referrerpolicy="no-referrer-when-downgrade">
 
     <div class="people">
         <div>
-            <img src="image-folder/usermpic.png" alt="user-male-picture">
+            <img src="image-folder/usermpic.svg" alt="user-male-picture">
             <p><span>John Doe</span> Marketing Manager <br> Phone : (+212) 600 000 000 <br>Email: contact@example.com</p>
         </div>
 
         <div>
-            <img src="image-folder/userfpic.png" alt="user-male-picture">
+            <img src="image-folder/userfpic.svg" alt="user-male-picture">
             <p><span>Jane Doe</span> Product Manager <br> Phone : (+212) 600 000 000 <br>Email: contact@example.com</p>
         </div>
 
         <div>
-            <img src="image-folder/usermpic.png" alt="user-male-picture">
+            <img src="image-folder/usermpic.svg" alt="user-male-picture">
             <p><span>John Doe</span> Delivery Manager <br> Phone : (+212) 600 000 000 <br>Email: contact@example.com</p>
         </div>
     </div>
