--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
+    <title>My Cart</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -19,7 +19,7 @@
             <li><a href="shop.html">Shop</a></li>
             <li><a href="about.html">About</a></li>
             <li><a  href="contact.html">Contact</a></li>
-            <li><a class="hide"  href="cart.html">Mon panier</a></li>
+            <li><a href="login.html">Login</a></li>
         </ul>
     </div>
 
@@ -42,7 +42,6 @@
     </div>
 
 </section>
-
 
 <!--Main Cart products-->
 <section id="cart" class="section-p1">
