--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a class="hide" href="cart.html">Mon panier</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </div>
     
