--- a/sproduct.html
+++ b/sproduct.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Product</title>
+    <title>Shop Product</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -18,7 +18,7 @@
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a class="hide" href="cart.html">Mon panier</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </div>
         <div  class="carty">
