--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@ loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         <h4>À propos</h4>
         <a href="#">MonSouk</a>
         <a href="#">Politique de confidentialité</a>
-        <a href="#">Termes & Conditions</a>
+        <a href="cgv.html">Conditions générales d'utilisation</a>
         <a href="#">Contactez-nous !</a>
 <br>
 <br>
