--- a/index.html
+++ b/index.html
@@ -530,16 +530,16 @@
     <!--second footer column-->
     <div class="col">
         <h4>À propos</h4>
-        <a href="#">MonSouk</a>
+        <a href="index.html">MonSouk</a>
         <a href="#">Politique de confidentialité</a>
-        <a href="#">Termes & Conditions</a>
-        <a href="#">Contactez-nous !</a>
+        <a href="cgv.html">Conditions générales d'utilisation</a>
+        <a href="contact.html">Contactez-nous !</a>
 <br>
 <br>
         <h4>Compte client</h4>
-        <a href="#">Connection</a>
-        <a href="#">Panier</a>
-        <a href="#">Couds de coeur</a>
+        <a href="login.html">Connection</a>
+        <a href="cart.html">Panier</a>
+        <a href="shop.html">Couds de coeur</a>
         <a href="#">Suivre mon colis</a>
         <a href="#">Support</a>
     </div>
