--- a/login.html
+++ b/login.html
@@ -43,13 +43,13 @@
                                 <!--Login username-->
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Username">
+                        <input required type="text" placeholder="Username">
                     </div>
 
                                 <!--Login password-->
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password">
+                        <input required type="password" placeholder="Password">
                     </div>
 
                                 <!--button-->
@@ -83,18 +83,18 @@
                                 <!--Login username-->
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Username">
+                        <input required type="text" placeholder="Username">
                     </div>
 
                                 <!--Login password-->
                     <div class="input-field">
                         <i class="fas fa-envelope"></i>
-                        <input type="email" placeholder="Email">
+                        <input required type="email" placeholder="Email">
                     </div>
                                 <!--Login password-->
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password">
+                        <input required type="password" placeholder="Password">
                     </div>
 
                                 <!--button-->
