--- a/cart.html
+++ b/cart.html
@@ -155,7 +155,7 @@
         <h4>À propos</h4>
         <a href="#">MonSouk</a>
         <a href="#">Politique de confidentialité</a>
-        <a href="#">Termes & Conditions</a>
+        <a href="cgv.html">Conditions générales d'utilisation</a>
         <a href="#">Contactez-nous !</a>
 <br>
 <br>
