--- a/cgv.html
+++ b/cgv.html
@@ -70,10 +70,10 @@
         <h1>Article 1. Objet</h1></header>
 <p>Les présentes conditions de vente visent à définir les relations contractuelles entre
     ......................... (NOM SOCIÉTÉ) et l’acheteur et les conditions applicables à tout achat
-    effectué par le biais du site internet ......................... (nom du site, url). L’acquisition d’un
+    effectué par le biais du site internet ......................... (nom du site, url). <br> L’acquisition d’un
     produit à travers le présent site implique une acceptation sans réserve par l’acheteur des
     présentes conditions de vente dont l’acheteur reconnaît avoir pris connaissance préalablement
-    à sa commande. Avant toute transaction, l’acheteur déclare d’une part que l’achat de produits
+    à sa commande. <br>Avant toute transaction, l’acheteur déclare d’une part que l’achat de produits
     sur le site …………………… (nom du site, url) est sans rapport direct avec son activité
     professionnelle et est limité à une utilisation strictement personnelle et d’autre part avoir la
     pleine capacité juridique, lui permettant de s’engager au titre des présentes conditions
@@ -90,7 +90,7 @@
     <header>           
         <h1>Article 2. Produits</h1> </header>
 <p>Les produits proposés sont ceux qui figurent sur le site ......................... (nom du site, url) de la
-    société ......................... (NOM SOCIÉTÉ), dans la limite des stocks disponibles. La société
+    société ......................... (NOM SOCIÉTÉ), dans la limite des stocks disponibles.<br> La société
     ......................... (NOM SOCIÉTÉ) se réserve le droit de modifier à tout moment l’assortiment
     de produits. <br>Chaque produit est présenté sur le site internet sous forme d’un descriptif
     reprenant ses principales caractéristiques techniques (contenance, utilisation, composition…).
@@ -337,6 +337,7 @@
     <p>© 2024, MonSouk - All rights reserved</p>
 </div>
 
-<script src="cgv.js"></script>
+        <script src="index.js"></script>
+        <script src="cgv.js"></script>
 </body>
 </html>
