--- a/cart.html
+++ b/cart.html
@@ -7,6 +7,7 @@
     <title>My Cart</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="topbtn.css">
 </head>
 
 <body>
@@ -184,6 +185,9 @@
     <p>© 2024, MonSouk - All rights reserved</p>
 </div>
 
+<!--top button-->
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+        <script src="topbtn.js"></script>
         <script src="index.js"></script>
 </body>
 </html>
