--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">  
+    <link rel="stylesheet" href="topbtn.css">
 </head>
 
 <body>
@@ -181,8 +182,10 @@ loading="lazy" referrerpolicy="no-referrer-when-downgrade">
     <hr>
     <p>© 2024, MonSouk - All rights reserved</p>
 </div>
-
+<!--top button-->
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
 
         <script src="index.js"></script>
-</body>
+        <script src="topbtn.js"></script>
+</body>       
 </html>
