--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">  
+    <link rel="stylesheet" href="topbtn.css">
 </head>
 <body class="shop">
     <!--Header-->
@@ -461,7 +462,8 @@
                     <img src="image-folder/logo-vi-ma.png" alt="Visa-Mastercard">
             </div>
     </section >
-
+<!--top button-->
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
 <!--Copyright-->
     <div class="copyright">
         <hr>
@@ -469,5 +471,6 @@
     </div>
     
             <script src="index.js"></script>
+            <script src="topbtn.js"></script>
     </body>
 </html>
