--- a/sproduct.html
+++ b/sproduct.html
@@ -7,6 +7,8 @@
     <title>Shop Product</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="topbtn.css">
+    
 </head>
 <body>
     <!--Header-->
@@ -224,6 +226,10 @@
         <hr>
         <p>© 2024, MonSouk - All rights reserved</p>
     </div>
+
+    <!--top button-->
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+    
     <script>
         let MainImg=document.getElementById("mainImg");
         let SmallImg=document.getElementsByClassName("smallImg");
@@ -243,6 +249,8 @@
 
 
     </script>
+
             <script src="index.js"></script>
+            <script src="topbtn.js"></script>
     </body>
 </html>
