--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>About Page</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="topbtn.css">
 </head>
 
 <body>
@@ -171,8 +172,10 @@
     <hr>
     <p>© 2024, MonSouk - All rights reserved</p>
 </div>
-
+<!--top button-->
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
 
         <script src="index.js"></script>
+        <script src="topbtn.js"></script>
 </body>
 </html>
