--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
+    <link rel="stylesheet" href="topbtn.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+
 <!--Header-->
 <section id="header">
     <a href="index.html"><img src="image-folder/ecom-logo.png" alt="Monsouk-Logo" class="logo"></a>
@@ -560,8 +562,10 @@
     <hr>
     <p>© 2024, MonSouk - All rights reserved</p>
 </div>
-
+<!--top button-->
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
 
         <script src="index.js"></script>
+        <script src="topbtn.js"></script>
 </body>
 </html>
